--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "pm2": "^4.5.0",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "soap": "^0.36.0"
   }
 }
