--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg-hstore": "^2.3.3",
     "pm2": "^4.5.0",
     "sequelize": "^6.3.5",
-    "soap": "^0.36.0"
+    "soap": "^0.36.0",
+    "xml2js": "^0.4.23"
   }
 }
