--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-formidable": "^1.2.0",
+    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "node-localstorage": "^2.1.6",
